# kloch-launcher-rezenv

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
kloch_rezenv/: __init__.py  _dataclass.py
tests/: conftest.py  pytest.ini  test_e2e.py  test_kloch_rezenv.py
tests/data/: profile.e2e.1.yml
tests/data/rezrepo/testpkg/1.2.3/: package.py
