[tool.poetry]
name = "kloch_rezenv"
version = "0.1.0"
description = "Launcher plugin for Kloch implementing support for rez."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
kloch = ">=0.11"
# // extras
pytest = { version = ">=7.2.0", python = ">=3.7", optional = true }
black = { version = "^24.4.2", python = ">=3.9", optional = true }
# XXX: issue with CI on unix machine
typing-extensions = { version = "<4.8", optional = true }


[tool.poetry.extras]
dev = ["pytest", "black", "typing-extensions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
